--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: PRROC
 Type: Package
 Title: Precision-Recall and ROC Curves for Weighted and Unweighted Data
-Version: 1.0
-Date: 2014-12-16
+Version: 1.1
+Date: 2015-02-23
 Author: Jan Grau and Jens Keilwagen
 Maintainer: Jan Grau <grau@informatik.uni-halle.de>
 Description: Computes the areas under the precision-recall (PR) and ROC curve for weighted (e.g., soft-labeled) and unweighted data. In contrast to other implementations, the interpolation between points of the PR curve is done by a non-linear piecewise function. In addition to the areas under the curves, the curves themselves can also be computed and plotted by a specific S3-method.
 License: GPL-3
-Packaged: 2014-12-16 21:03:40 UTC; dev
+Packaged: 2015-02-25 16:15:57 UTC; dev
+Suggests: testthat, ggplot2
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2014-12-16 22:34:59
+Date/Publication: 2015-02-26 02:14:52
